added values class and doc
